Fix tag horizontal spacing

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -85,6 +85,7 @@ a:focus {
   text-decoration: none;
   background-color: #e9e9e9;
   border-radius: 3px;
+  line-height: 2;
 }
 .tag-item:hover,
 .tag-item:focus {
